# mcc-reader

./: .gitignore  Dockerfile  LICENSE  MCCReader.py  README.md  constants.py  decoder.py  dev.py  dev.sh  pyproject.toml  requirements.txt  test.py  watch.py
MCCReader/: MCCReader.py  __init__.py  constants.py  decoder.py  models.py  utils.py
MCCReader/parsers/: __init__.py  ccd_parser.py  cea608_parser.py  cea708_parser.py  dbg_parser.py
samples/: AXMT3111100H.mcc  Wrong_header.mcc  captions.json  sample.mcc
samples/output/: AXMT3111100H-C1.608  AXMT3111100H-S1.708  AXMT3111100H.ccd  AXMT3111100H.dbg  BigBuckBunny_256x144-24fps-C1.608  BigBuckBunny_256x144-24fps-C3.608  BigBuckBunny_256x144-24fps-S1.708  BigBuckBunny_256x144-24fps-S2.708  BigBuckBunny_256x144-24fps-S3.708  BigBuckBunny_256x144-24fps-S4.708  BigBuckBunny_256x144-24fps-S5.708  BigBuckBunny_256x144-24fps-S6.708  BigBuckBunny_256x144-24fps.ccd  BigBuckBunny_256x144-24fps.dbg  NightOfTheLivingDead-C1.608  NightOfTheLivingDead-S1.708  NightOfTheLivingDead.dbg  sample-C1.608  sample-S1.708  sample.ccd  sample.dbg
src/: MCCReader.py  decoder.py  script.py  utils.py
src/parsers/: ccd_parser.py  cea608_parser.py  cea708_parser.py  dbg_parser.py
tests/: conftest.py  test_ccd_parser.py  test_cea608_parser.py  test_cea708_parser.py  test_dbg_parser.py  test_decoder.py  test_mccreader.py  test_utils.py
